# snapctl

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml  docs.yml  release.yml
docs/: docusaurus.config.ts  package.json
docs/docs/: quickstart.md
docs/src/pages/: index.tsx
src/: cli.rs  config.rs  main.rs
src/commands/: mod.rs  version.rs
src/commands/delete/: client.rs  clients.rs
src/commands/get/: client.rs  clients.rs  group.rs  groups.rs  mod.rs  server.rs  stream.rs  streams.rs
src/commands/set/: client.rs  group.rs  mod.rs
src/rpc/: client.rs
src/utils/: display.rs  mod.rs  websocket.rs
