[package]
name = "snapctl"
version = "0.1.0"
edition = "2021"
description = "A CTL application for manage Snapcast servers"
authors = ["thibault.desaules@open-sori.dev"]
license = "GPL-3.0"
repository = "https://github.com/open-sori/snapctl"

[dependencies]
tokio = { version = "1.46", features = ["full"] }
tokio-tungstenite = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["v4"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
anyhow = "1.0"