[package]
name = "snapctl"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }
clap = { version = "4.0", features = ["derive", "env"] }
futures = "0.3"
anyhow = "1.0"
dirs = "4.0"
serde_yaml = "0.9"